# system-registration-for-agb

./: ReadMe.md  pyproject.toml
backend/: .env  main.py
backend/api/api_v1/CRUD/: crud_base.py  user.py
backend/api/api_v1/schemas/: __init__.py  users.py
backend/api/api_v1/views/: user.py
backend/core/: config.py
backend/core/models/: base.py  db_helper.py  users.py
